...
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
        app:layout_constraintStart_toStartOf="@+id/cancel_btn">

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="421dp"
            android:layout_height="816dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/enter_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="Enter Full Name"
...
