...
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="Password reset link sent to the following email"
                android:textColor="@color/cardview_light_background"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/email_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.918" />

...
